# dh-core

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  core.cabal  package.yaml
accelerate/test/: LibSpec.hs
analyze/: .gitignore  CHANGELOG.md  LICENSE.md  README.md  analyze.cabal  package.yaml  stack.yaml
analyze/bench/: Main.hs  streamly.hs
analyze/examples/: MoneySpent.hs
analyze/examples/data/: items.csv  prices.csv
analyze/src/: Analyze.hs
analyze/src/Analyze/: Common.hs  Conversions.hs  Csv.hs  Datasets.hs  Decoding.hs  Dplyr.hs  Html.hs  Ops.hs  RFrame.hs  Values.hs
analyze/src/Analyze/Dplyr/: Generic.hs
analyze/src/Analyze/Frame/: Dense.hs  Sparse.hs
analyze/src/Analyze/Frame/Dense/: Generic.hs
analyze/src/Analyze/Frame/Sparse/: Generic.hs
analyze/src/Analyze/IO/: CSV.hs  HTML.hs
analyze/src/Analyze/RFrame/: Generic.hs
analyze/src/Analyze/Values/: Generic.hs
analyze/test/: DocTest.hs  Fixtures.hs  Generation.hs  Money.hs  MoneyFixtures.hs  PropTests.hs  Spec.hs  Spec2.hs  UnitTests.hs
app/: Main.hs
data/: ReutersGrain-test.arff  ReutersGrain-train.arff  iris.arff  segment-challenge.arff
datasets/: .gitignore  .travis.yml  LICENSE  README.md  changelog.md  datasets.cabal  stack.yaml
datasets/bench/: Main.hs
datasets/bench/Numeric/Dataloader/: Benchmark.hs
datasets/datafiles/: michelson.json  titanic.tsv  titanic2_full.tsv
datasets/datafiles/arff/: README  ReutersCorn-test.arff  ReutersCorn-train.arff  cpu.arff  cpu.with.vendor.arff  glass.arff  ionosphere.arff  labor.arff  segment-test.arff  soybean.arff  supermarket.arff  vote.arff  weather.arff  weather.nominal.arff
datasets/datafiles/netflix/movies/: movie_titles.txt
datasets/datafiles/netflix/test/: qualifying.txt
datasets/datafiles/netflix/training/: mv_0000001.txt
datasets/src/Numeric/: Dataloader.hs  Datasets.hs
datasets/src/Numeric/Datasets/: Abalone.hs  Adult.hs  Anscombe.hs  ArffParser.hs  BostonHousing.hs  BreastCancerWisconsin.hs  CIFAR10.hs  CO2.hs  Car.hs  Coal.hs  Diabetes.hs  Gapminder.hs  Iris.hs  Michelson.hs  Mushroom.hs  Mushroom.hs~  Netflix.hs  Nightingale.hs  OldFaithful.hs  Quakes.hs  States.hs  Sunspots.hs  Titanic.hs  Titanic.hs~  UN.hs  Vocabulary.hs  Wine.hs  WineQuality.hs
datasets/src/Numeric/Datasets/Internal/: ArffParser.hs  Streaming.hs
datasets/src/Streaming/: Instances.hs
datasets/test/: Spec.hs
dense-linear-algebra/: CHANGELOG.md  dense-linear-algebra.cabal  stack.yaml
dense-linear-algebra/.stack-work/ghci/384803b3/: cabal_macros.h
dense-linear-algebra/.stack-work/ghci/97842118/: cabal_macros.h
dense-linear-algebra/.stack-work/install/x86_64-linux/lts-12.14/8.4.3/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  ansi-terminal-0.8.1-DTnXTZHQH9cDx7RXC7iISb  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  dense-linear-algebra-0.1.0.0-Elr9WMmlb0BKsm96yzG2PQ  dense-linear-algebra-0.1.0.0-GEAoIQyVSV8AOdOO4CkwDp  hspec-2.5.5-FuOC97NUjg47UG2A5AEwkM  hspec-core-2.5.5-IgfpDVQdTmGjbzfYzu390  hspec-discover-2.5.5-3lbzfYKyCX74uo24qYYO8u  hspec-expectations-0.8.2-7lpBAWb1yuYLnEELJ6wtYs  math-functions-0.2.1.0-2NhhnlEtREo2bNP6Xf5UPa  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  quickcheck-io-0.2.0-EkaMZi89NOa4JiMdRU98Zc  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  setenv-0.1.1.3-H1xmIqlPy4yIDquO6eJhBl  stm-2.4.5.1-1n1oRyz2WxkGi5pMiXlR3y  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ  vector-0.12.0.1-4awQG9XUvVEBfJgKGHBhOb  vector-algorithms-0.7.0.4-LTeQMW2mffA77UAhZhdPqK  vector-binary-instances-0.2.5-Ecj7NBUGVDf6qwOuPXybiw  vector-th-unbox-0.2.1.6-4zK7oCb71eH1479ZMEneUA
dense-linear-algebra/.stack-work/install/x86_64-linux/lts-12.14/8.4.3/pkgdb/: dense-linear-algebra-0.1.0.0-Elr9WMmlb0BKsm96yzG2PQ.conf  package.cache
dense-linear-algebra/.stack-work/install/x86_64-linux/lts-13.0/8.6.3/flag-cache/: HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  QuickCheck-2.12.6.1-DGJppTkvkJH851oWd3mp4K  ansi-terminal-0.8.2-LZ54B5ErqCiIlNwOVvnj65  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  clock-0.7.2-6GYCAXixqb8FuS0ooeoDbD  colour-2.3.4-BYzTQyKoQ9LK29pbkBo2SY  data-default-class-0.1.2.0-FeIQ5tLoVZBHMSgrT9zptQ  dense-linear-algebra-0.1.0.0-2Fw1AZDbSu32moPU03ifCv  erf-2.0.0.0-ExhHoenPosmHlOroBQQced  hspec-2.6.0-7SxSQ0Ds7rO2NJoIyFCoWW  hspec-core-2.6.0-FkhAmFx9h3V9HjcLPZ7EVk  hspec-discover-2.6.0-InTApftLWlwINSqAZLH9fe  hspec-expectations-0.8.2-xEhsaJyqHC4OUn6v2CIJJ  math-functions-0.3.1.0-3DZEqBuHyxoGgp9hwqpfp0  primitive-0.6.4.0-1mvPxVOk6Q6KOkWCZxqESf  quickcheck-io-0.2.0-3ycEyt8oHNvFUvW1rQQ2JM  random-1.1-3ypV4EIycgb35PKjTYYr5q  setenv-0.1.1.3-HP1VaXwIiC57fC12rF12pz  tf-random-0.5-DGXDH2T2OVbHHRLZ895CUL  vector-0.12.0.2-5G85DK6NPIx1LphnqJy7eO  vector-algorithms-0.8.0.1-l02fj2Jj9pCux4dolCIMf  (+2 more)
dense-linear-algebra/bench/: ChronosBench.hs  Main.hs  WeighBench.hs
dense-linear-algebra/src/Statistics/: .#Matrix.hs  Matrix.hs
dense-linear-algebra/src/Statistics/Matrix/: Algorithms.hs  Fast.hs  Types.hs
dense-linear-algebra/src/Statistics/Matrix/Fast/: Algorithms.hs
dense-linear-algebra/test/: .#AlgorithmsSpec.hs  AlgorithmsSpec.hs  Fixtures.hs  LibSpec.hs  Runtime.hs  Spec.hs  Utils.hs  UtilsSpec.hs
dh-core/: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  core.cabal  stack.yaml
dh-core-accelerate/: README.md  core-accelerate.cabal  stack.yaml
dh-core/app/core/: Main.hs
dh-core/src/Core/Data/: Dataset.hs  Frame.hs  Trie.hs
dh-core/src/Core/Data/Datum/: Vector.hs
dh-core/src/Core/Data/Frame/: Decode.hs  Generic.hs  Value.hs
dh-core/src/Core/Data/Frame/Value/: Generic.hs
dh-core/src/Core/Numeric/: BLAS.hs
dh-core/src/Core/Numeric/BLAS/: Class.hs
dh-core/src/Core/Numeric/LinearAlgebra/: Class.hs
dh-core/src/Core/Numeric/Statistics/: InformationTheory.hs
dh-core/src/Core/Numeric/Statistics/Classification/: DecisionTrees.hs  Exceptions.hs  Utils.hs
dh-core/test/: DocTest.hs  LibSpec.hs
src/: ArffParser.hs  DebugTrace.hs  Lib.hs
src/Core/Numeric/BLAS/: Accelerate.hs
test/: LibSpec.hs
(+74 files in other folders)
