cabal-version:  1.12
name:           analyze
version:        0.2.0
synopsis:       Haskell data analysis and manipulation library
description:    Haskell data analysis and manipulation library, please see README.md
category:       Data Science
homepage:       https://github.com/DataHaskell/dh-core/analyze
author:         Eric Conlon <ejconlon@gmail.com>, Nikita Tchayka <nikitatchayka@gmail.com>
maintainer:     Marco Zocca <ocramz fripost org>
copyright:      2017-2018 Analyze contributors
license:        BSD3
license-file:   LICENSE.md
build-type:     Simple
extra-source-files:  README.md
                     CHANGELOG.md
tested-with:    GHC == 8.2.2, GHC == 8.4.3

library
  exposed-modules:
      Analyze
      Analyze.Common
      Analyze.Conversions
      Analyze.Csv
      Analyze.Datasets
      Analyze.Decoding
      Analyze.Html
      Analyze.Ops
      Analyze.RFrame
      Analyze.RFrame.Generic
      Analyze.Values
      Analyze.Values.Generic                  
  other-modules:
      Paths_analyze
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings
  build-depends:
        aeson ,
        base >= 4.9 && < 5,
        binary ,
        bytestring ,
        cassava ,
        exceptions ,
        foldl ,
        free ,
        generics-sop ,        
        hashable ,
        lucid ,
        text ,
        unordered-containers ,
        vector ,  
        -- DEBUG                
        tasty-hunit,
        tasty-quickcheck
        -- QuickCheck,
        -- hspec

  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Fixtures
      Generation
      Analyze
      Analyze.Common
      Analyze.Conversions
      Analyze.Csv
      Analyze.Datasets
      Analyze.Decoding
      Analyze.Html
      Analyze.Ops
      Analyze.RFrame
      Analyze.Values
      Paths_analyze
  hs-source-dirs:
      test
      src
  default-extensions: OverloadedStrings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        QuickCheck ,
        aeson ,
        base ,
        binary ,
        bytestring ,
        cassava ,
        exceptions ,
        foldl ,
        free ,
        hashable ,
        lucid ,
        tasty ,
        tasty-hunit ,
        tasty-quickcheck ,
        text ,
        unordered-containers ,
        vector 
  default-language: Haskell2010
