name:           analyze
version:        0.2.0
synopsis:       Haskell data analysis and manipulation library
description:    Haskell data analysis and manipulation library, please see README.md
category:       Data Science
homepage:       https://github.com/DataHaskell/dh-core/analyze
author:         Eric Conlon <ejconlon@gmail.com>, Marco Zocca <ocramz fripost org>, Nikita Tchayka <nikitatchayka@gmail.com>
maintainer:     Marco Zocca <ocramz fripost org>
copyright:      2017-2018 Analyze contributors
license:        BSD3
license-file:   LICENSE.md
build-type:     Simple
extra-source-files:  README.md
                     CHANGELOG.md
tested-with:    GHC == 8.2.2, GHC == 8.4.3
cabal-version:  1.12

library
  exposed-modules:
      Analyze
      Analyze.Common
      Analyze.Frame.Sparse
      Analyze.Frame.Sparse.Generic
      Analyze.Frame.Dense            
      Analyze.Frame.Dense.Generic
      Analyze.IO.CSV
      Analyze.IO.HTML
      Analyze.Decoding
      Analyze.Ops
      Analyze.Values
      Analyze.Values.Generic
  other-modules:
      Paths_analyze
      Analyze.Datasets
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings
  build-depends:
        aeson ,
        base >= 4.9 && < 5,
        binary ,
        bytestring ,
        cassava ,
        exceptions ,
        foldl ,
        free ,
        generics-sop ,        
        hashable ,
        lucid ,
        streaming ,
        text ,
        unordered-containers ,
        vector ,
        -- DEBUG                
        tasty-hunit,
        tasty-quickcheck
        -- QuickCheck,
        -- hspec

  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Fixtures
      Generation
      Analyze
      Analyze.Common
      Analyze.IO.CSV
      Analyze.IO.HTML                      
      Analyze.Datasets
      Analyze.Decoding
      Analyze.Ops
      Analyze.Frame.Dense
      Analyze.Frame.Sparse                
      Analyze.Values
      Paths_analyze
  hs-source-dirs:
      test
      src
  default-extensions: OverloadedStrings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        QuickCheck ,
        aeson ,
        base ,
        binary ,
        bytestring ,
        cassava ,
        exceptions ,
        foldl ,
        free ,
        hashable ,
        lucid ,
        tasty ,
        tasty-hunit ,
        tasty-quickcheck ,
        text ,
        unordered-containers ,
        vector 
  default-language: Haskell2010

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: DocTest.hs
  hs-source-dirs:
        test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
       base , 
       doctest ,
       generics-sop