cabal-version: 1.12
name:           analyze
version:        0.2.0
synopsis:       Haskell data analysis and manipulation library
description:    Please see README.md
category:       Data Science
homepage:       https://github.com/DataHaskell/dh-core/analyze
author:         Eric Conlon <ejconlon@gmail.com>, Nikita Tchayka <nikitatchayka@gmail.com>
maintainer:     Marco Zocca <ocramz fripost org>
copyright:      2017-2018 Analyze contributors
license:        BSD3
license-file:   LICENSE.md
build-type:     Simple

library
  exposed-modules:
      Analyze
      Analyze.Common
      Analyze.Conversions
      Analyze.Csv
      Analyze.Datasets
      Analyze.Decoding
      Analyze.Html
      Analyze.Ops
      Analyze.RFrame
      Analyze.Values
  other-modules:
      Paths_analyze
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings
  build-depends:
        aeson >=1.3.1.1,
        base >=4.9 && <5,
        binary >=0.8.5.1,
        bytestring >=0.10.8.2,
        cassava >=0.5.1.0,
        exceptions >=0.10.0,
        foldl >=1.4.5,
        free >=5.0.2,
        hashable >=1.2.7.0,
        lucid >=2.9.10,
        text >=1.2.3.1,
        unordered-containers >=0.2.9.0,
        vector >=0.12.0.1,
        -- DEBUG                
        tasty-hunit,
        tasty-quickcheck
        -- QuickCheck,
        -- hspec

  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Fixtures
      Generation
      Analyze
      Analyze.Common
      Analyze.Conversions
      Analyze.Csv
      Analyze.Datasets
      Analyze.Decoding
      Analyze.Html
      Analyze.Ops
      Analyze.RFrame
      Analyze.Values
      Paths_analyze
  hs-source-dirs:
      test
      src
  default-extensions: OverloadedStrings
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        QuickCheck >=2.11.3,
        aeson >=1.3.1.1,
        base >=4.9 && <5,
        binary >=0.8.5.1,
        bytestring >=0.10.8.2,
        cassava >=0.5.1.0,
        exceptions >=0.10.0,
        foldl >=1.4.5,
        free >=5.0.2,
        hashable >=1.2.7.0,
        lucid >=2.9.10,
        tasty >=1.1.0.4,
        tasty-hunit >=0.10.0.1,
        tasty-quickcheck >=0.10,
        text >=1.2.3.1,
        unordered-containers >=0.2.9.0,
        vector >=0.12.0.1  
  default-language: Haskell2010
