name:                core-accelerate
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DataHaskell/core-accelerate
license:             BSD3
license-file:        LICENSE
author:              DataHaskell
maintainer:          Data-Haskell@haskell.org
copyright:           2018 DataHaskell
category:            Data Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , accelerate

-- executable core-accelerate
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , core-accelerate

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , core-accelerate
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/DataHaskell/core-accelerate
