name:                core
version:             0.1.0.0
synopsis:            DataHaskell core project
description:         DataHaskell core project, please see README
homepage:            https://github.com/DataHaskell/dh-core
license:             BSD3
license-file:        LICENSE
author:              DataHaskell
maintainer:          Marco Zocca (ocramz fripost org), data-haskell@haskell.org
copyright:           2018 DataHaskell
category:            Data Science
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Core.Numeric.BLAS
                       Core.Numeric.BLAS.Class
  build-depends:
                base >=4.10 && <5,
                bytestring >=0.10.8.1,
                containers >=0.5.7.1,
                exceptions >=0.8.3,
                text >=1.2.2.2,
                vector >=0.12.0.1,
                vector-algorithms >=0.7.0.1,
                       -- DEBUG                
                hspec >=2.4.8,
                QuickCheck >=2.10.1

-- executable core
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , core

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base >=4.10 && < 5,
                       core -any,
                       hspec >=2.4.8,
                       QuickCheck >=2.10.1

source-repository head
  type:     git
  location: https://github.com/DataHaskell/dh-core
