name:                core
version:             0.1.0.0
synopsis:            DataHaskell core project
description:         DataHaskell core project
homepage:            https://github.com/DataHaskell/dh-core
license:             BSD3
license-file:        LICENSE
author:              DataHaskell
maintainer:          Marco Zocca (ocramz fripost org), data-haskell@haskell.org
copyright:           2018 DataHaskell
category:            Data Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Core.Numeric.BLAS
                       Core.Numeric.BLAS.Class
  build-depends:       base >= 4.7 && < 5,
                       bytestring >=0.10.8.2,
                       containers >=0.5.11.0,
                       exceptions >=0.10.0,
                       text >=1.2.3.1,
                       vector >=0.12.0.1,
                       vector-algorithms >=0.7.0.4,
                       -- DEBUG
                       hspec >=2.5.5,
                       QuickCheck >=2.11.3            

-- executable core
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , core

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.11.1.0,
                       core -any,
                       hspec >=2.5.5,
                       QuickCheck >=2.11.3                     

source-repository head
  type:     git
  location: https://github.com/DataHaskell/dh-core
